--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header-right">
         <a href="#">レッスン</a>
         <a href="menu.html">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="/app/top.html" class="login">ログイン</a>
       </div>
     </div>
   </header>
